--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "clsx": "^2.1.0",
+    "copy-webpack-plugin": "^12.0.2",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
