--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -24,7 +24,7 @@
     "comment-no-empty": true,
     "no-empty-source": true,
     "no-invalid-double-slash-comments": true,
-    "no-unknown-animations": true,
+    "no-unknown-animations": null,
     "function-url-no-scheme-relative": true,
     "number-max-precision": 2,
     "declaration-block-single-line-max-declarations": 1,
